added fermilab paper

--- a/publications_extra.html
+++ b/publications_extra.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Publications</title>
+		<title>Generic - Solid State by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Publications</a></h1>
+						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,8 +44,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Publications</h2>
-								<p>Below are publications that I am an author or co-author on, along with details of the paper.</p>
+								<h2>Generic</h2>
+								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
 							</div>
 						</header>
 
@@ -64,9 +64,9 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Commissioning the Muon Campus external beamline: first beam optics measurement</h3>
-											<p>Trevor Loe and Diktys Stratakis. Journal of Instrumentation 18(04):P04005, April 2023</p>
-											<a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005" class="special">Link to paper</a>
+											<h3 class="major">Sed feugiat lorem</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
@@ -82,7 +82,7 @@
 					</section>
 
 				<!-- Footer -->
-				<!--	<section id="footer">
+					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
@@ -123,7 +123,7 @@
 						</div>
 					</section>
 
-			</div> -->
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
