changed name to projects and added picture

--- a/publications.html
+++ b/publications.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="publications.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="projects.html">Projects</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -61,7 +61,7 @@
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/muon_campus.jpg" alt="" /></a>
 											<h3 class="major">Commissioning the Muon Campus external beamline: first beam optics measurement</h3>
 											<p>Trevor Loe and Diktys Stratakis. Journal of Instrumentation 18(04):P04005, April 2023</p>
 											<a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005" class="special">Link to paper</a>
