--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
+								<li><a href="publications.html">Publications</a></li>
+								<li><a href="projects.html">Projects</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
