--- a/publications.html
+++ b/publications.html
@@ -67,10 +67,10 @@
 											<a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005" class="special">Link to paper</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/crab_cavities_0.jpg" alt="" /></a>
 											<h3 class="major">Time-domain simulation of the crab cavity/beam interation</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>Trevor Hidalgo, Trevor Loe, Matti Toivola, Themis Mastoridis, Kevin Smith. BNL Technical Notes, Feb. 2023</p>
+											<a href="https://technotes.bnl.gov/Home/ViewTechNote/224087?selectedPageNumber=0" class="special">Link to paper</a>
 										</article>
 									</section>
 
