--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
 										<article>
 											<a href="#" class="image"><img src="polysat.jpg" alt="" /></a>
 											<h3 class="major">A Low Cost Star Tracker for CubeSat Missions</h3>
-											<p>osh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo. AIAA Dec. 2021</p>
+											<p>Josh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo. AIAA Dec. 2021</p>
 											<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2022-0520" class="special">Link to paper</a>
 										</article>
 									</section>
