fixed image cause i dumb

--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,7 @@
 											<a href="https://technotes.bnl.gov/Home/ViewTechNote/224087?selectedPageNumber=0" class="special">Link to paper</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="polysat.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/polysat2.jpeg" alt="" /></a>
 											<h3 class="major">A Low Cost Star Tracker for CubeSat Missions</h3>
 											<p>Josh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo. AIAA Dec. 2021</p>
 											<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2022-0520" class="special">Link to paper</a>
