Added a little bit to the top of projects

--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Publications</title>
+		<title>Trevor Loe - Publications</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,7 +43,7 @@
 						<header>
 							<div class="inner">
 								<h2>Publications</h2>
-								<p>Below are publications that I am an author or co-author on, along with details of the paper.</p>
+								<p>Below are publications that I am an author or co-author on.</p>
 							</div>
 						</header>
 
