--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Trevor Loe</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -42,8 +42,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Elements</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Projects</h2>
+								<p>Below are many of the projects that I have worked on. Those whose code is not proprietary are accompanied with a link to their respective repos.</p>
 							</div>
 						</header>
 
