--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<ul class="actions">
-													<li><a href="#" class="button primary">Default</a></li>
+													<li><a href="#test_table" class="button primary">Default</a></li>
 													<li><a href="#" class="button">Default</a></li>
 												</ul>
 												<ul class="actions small">
@@ -152,6 +152,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</section>
 
 									<section>
+										<div id="test_table">Test table go to here weeeeee<div>
 										<h3 class="major">Table</h3>
 										<h4>Default</h4>
 										<div class="table-wrapper">
