--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<ul class="actions">
-													<li><a href="#test_table" class="button primary">Default</a></li>
+													<li><a href="#test_table" class="button primary">Go to table weeeeeee</a></li>
 													<li><a href="#" class="button">Default</a></li>
 												</ul>
 												<ul class="actions small">
