--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,7 @@
 							</div>
 						</header>
 
+						<!-- Begin actual projects-->
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
@@ -68,6 +69,12 @@ while (!deck.isInOrder()) {
 }
 
 print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+									</section>
+
+									</section>
+										<div id="Star Tracker"><div>
+										<h4>Cal Poly Cubesat Laboratory - Star Tracker</h4>
+											<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
 									</section>
 
 									<section>
@@ -361,7 +368,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 
 				<!-- Footer -->
-					<section id="footer">
+					<!-- <section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
@@ -402,7 +409,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</div>
 					</section>
 
-			</div>
+			</div> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
