--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<h3 class="major">Projects</h3>
 											<h4>Cal Poly Cubesat Laboratory - Star Tracker</h4>
 												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+									<section>
 
 									<section>
 										<h3 class="major">Lists</h3>
