tried moving button again for star tracker

--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<h4>Cal Poly Cubesat Laboratory - Star Tracker</h4>
 												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
 												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
-												<li><a href="#" class="button small">Repository</a></li>
+												<a href="#" class="button small">Repository</a>
 									<section>
 
 									<section>
