added all the other projects I coudl think of

--- a/projects.html
+++ b/projects.html
@@ -81,17 +81,57 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<section>
 
 									<section>
-										<div id="StickCube"><div></div>
+										<div id="Rigid body dyna"><div></div>
 										<h3 class="major"></h3>
-											<h4>Cal Poly Cubesat Laboratory / ETOILES - StickCube</h4>
+											<h4>Cal Poly Cubesat Laboratory - Large Scale Rigid Body Dynamics Simulation for ADCS</h4>
 												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<a href="#" class="button small">Repository</a>
 									<section>
 
 									<section>
-										<div id="StickCube"><div></div>
+										<div id="Stickcube"><div></div>
 										<h3 class="major"></h3>
-											<h4>Cal Poly Cubesat Laboratory / ETOILES - StickCube</h4>
+											<h4>Cal Poly Cubesat Laboratory / ETOILES - Stickcube</h4>
 												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<a href="#" class="button small">Repository</a>
+									<section>
+
+									<section>
+										<div id="Crab cavity trans beam load"><div></div>
+										<h3 class="major"></h3>
+											<h4>Cal Poly Physics Department Under Dr. Themis Mastoridis - Crab Cavity Transient Beam Loading Simulation</h4>
+												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<a href="#" class="button small">Repository</a>
+									<section>
+
+									<section>
+										<div id="MCM"><div></div>
+										<h3 class="major"></h3>
+											<h4>COMAP MCM - Road Cyclist Bioenergy Model and Optimal Control</h4>
+												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<a href="#" class="button small">Repository</a>
+									<section>
+
+									<section>
+										<div id="Fermilab"><div></div>
+										<h3 class="major"></h3>
+											<h4>Fermi National Accelerator Laboratory - Muon Campus Beamline Data Analysis</h4>
+												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<a href="#" class="button small">Repository</a>
+									<section>
+
+									<section>
+										<div id="Mushroom data"><div></div>
+										<h3 class="major"></h3>
+											<h4>Mathematical Data Science Final Project - Clustering and TDA for iNaturalist Mushroom Foraging Data</h4>
+												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<a href="#" class="button small">Repository</a>
 									<section>
 
 									<section>
