--- a/projects.html
+++ b/projects.html
@@ -87,8 +87,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<h4>Cal Poly Cubesat Laboratory - Large Scale Rigid Body Dynamics Simulation for ADCS</h4>
 												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more rebust design framework for the CPCL ADCS.</p>
 												<p>This project involved working off of the MATLAB / Simulink framework developed by Liam Bruno as part of his masters thesis in aerospace engineering, which can be found <a href="https://digitalcommons.calpoly.edu/theses/2288/">here</a>. The code features an adjustable orbit propogator via the equation</span></p>
-												<math>
-													a=<box>-&mu<over>|R|<sup>3</sup></box>R
+												<math display="block">
+													a=<mfrac><mn>&#956</mn><msup><mi>|R|</mi><mn>3</mn></msup></mfrac>R
 												</math>
 												<a href="#" class="button small">Repository</a>
 									<section>
