--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<h4>Cal Poly Cubesat Laboratory - Large Scale Rigid Body Dynamics Simulation for ADCS</h4>
 												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more rebust design framework for the CPCL ADCS.</p>
 												<p>This project involved working off of the MATLAB / Simulink framework developed by Liam Bruno as part of his masters thesis in aerospace engineering, which can be found <a href="https://digitalcommons.calpoly.edu/theses/2288/">here</a>. The code features an adjustable orbit propogator via the equation
-												\[\mathbf{a}=\frac{\mu}{|\mathbf{R}|^3}\mathbf{R}\]</span></p>
+												\[\mathbf{a}=\frac{\mu}{|\mathbf{R}|^3}\mathbf{R}\]
 												<!--<math display="block">
 													a=<mfrac><mn>-&#956</mn><msup><mi>|R|</mi><mn>3</mn></msup></mfrac>R
 												</math>-->
@@ -100,7 +100,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<!--<math display="block">
 
 												</math>-->
-												a P.I.D. controller and tuner as well as several control modes. 
+												a P.I.D. controller and tuner as well as several control modes.</p>
+												<p>The goal of this project was 2-fold: to add additional control modes in order to accomidate upcoming missions and to add a simulation of the cubesat power system to the simulink. In many missions, the solar cells are not distributed evenly around the satellite so the power system depends heavily on the attitude of the satellite.</p>
+												
 												<a href="#" class="button small">Repository</a>
 									<section>
 
