finsihed up writing about rigid body dynamics sim

--- a/projects.html
+++ b/projects.html
@@ -115,8 +115,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												</math>-->
 												a P.I.D. controller and tuner as well as several control modes.</p>
 												<p>The goal of this project was 2-fold: to add additional control modes in order to accomidate upcoming missions and to add a simulation of the cubesat power system to the simulink. In many missions, the solar cells are not distributed evenly around the satellite so the power system depends heavily on the attitude of the satellite.</p>
-												<p>For this project I implemented a control mode for the \(\dot{B}\) algorithm </p>
-												<a href="#" class="button small">Repository</a>
+												<p>For this project I implemented a control mode for the \(\dot{B}\) algorithm, a detumbling algorithm involving only magnetometers and magnetorquers. I also worked to implement an active magnetorquer-only control algorithm. Additionally, I added power system simulation capability. The simulation now outputs power system information through the different control modes. The tool was used for the CPCL mission AMDROHP to compare different power budges under different control modes.</p>
 									<section>
 
 									<section>
