added pic for liams

--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div id="Rigid body dyna"><div></div>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory - Large Scale Rigid Body Dynamics Simulation for ADCS</h4>
-												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more rebust design framework for the CPCL ADCS.</p>
+												<p><span class="image left"><img src="images/simulink_adcs.png" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more rebust design framework for the CPCL ADCS.</p>
 												<p>This project involved working off of the MATLAB / Simulink framework developed by Liam Bruno as part of his masters thesis in aerospace engineering, which can be found <a href="https://digitalcommons.calpoly.edu/theses/2288/">here</a>. The code features an adjustable orbit propogator via the equation
 												\[\mathbf{a}=\frac{\mu}{|\mathbf{R}|^3}\mathbf{R}\]
 												<!--<math display="block">
@@ -122,7 +122,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div id="Stickcube"><div></div>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory / ETOILES - Stickcube</h4>
-												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
+												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>The attitude determination and control system (ADCS) is often the most difficult to test because the microgravity conditions in space are difficult to simulate on earth without expensive equiptment. In an attempt to remedy this for CPCL, Stickcube was started to be a testing aparatus for attitude determination hardware and software as well as control algorithms. The aparatus would involve an inverted pendulum, controlled with two reaction wheels.</p>
 												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
 												<a href="#" class="button small">Repository</a>
 									<section>
