--- a/projects.html
+++ b/projects.html
@@ -122,8 +122,22 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div id="Stickcube"><div></div>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory / ETOILES - Stickcube</h4>
-												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>The attitude determination and control system (ADCS) is often the most difficult to test because the microgravity conditions in space are difficult to simulate on earth without expensive equiptment. In an attempt to remedy this for CPCL, Stickcube was started to be a testing aparatus for attitude determination hardware and software as well as control algorithms. The aparatus would involve an inverted pendulum, controlled with two reaction wheels. The system was designed to use an arduino uno mounted to the top of the pendulum with the BNO055 IMU unit and 2 Pololu 9.7:1 metal gearmotors. </p>
-												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+												<p><span class="image right"><img src="images/new_cad1.png" alt="" /></span>The attitude determination and control system (ADCS) is often the most difficult to test because the microgravity conditions in space are difficult to simulate on earth without expensive equiptment. In an attempt to remedy this for CPCL, Stickcube was started to be a testing aparatus for attitude determination hardware and software as well as control algorithms. The aparatus would involve an inverted pendulum, controlled with two reaction wheels. The system was designed to use an arduino uno mounted to the top of the pendulum with the BNO055 IMU unit and 2 Pololu 9.7:1 metal gearmotors. A P.I.D. controller was programmed onto the arduino along with a complementary filter to obtain the IMU's absolute orientation.</p>
+												<p><span class="image left"><img src="images/new_wheel.png" alt="" /></span>For the project, several cad models were made and verified for manufacturability. The wheels were manufactured out of aluminum 6061. To get the wheel and controller specifications, a full simulation was created and tested in simulink. The simulation included the rigid body dynamics of the pendulum, the motor and reaction wheel dynamics and the P.I.D. controller.</p>
+												<p>The complementary filter was descritized using the bilinear transform from a continuous-time s-domain transfer function to a discrete time z-domain transfer function. The following difference equation was then obtained for it's implementation in the code
+													\[\Theta_{n} = \frac{1}{2+\omega_{c}T}(T*(u_{n}+u_{n-1})+\Theta_{n-1}*(\omega_c T - 2))
+													\]
+													where \(\omega_c\) is the complementary filter cutoff frequency, \(T\) is the sample time, and \(u_n=g_n+\omega_c a_n\) where \(g_n\) is the IMU's current gyroscope reading and \(a_n\) is the IMU's current accelerometer reading. Similarly the bilinear transform was used to convert the continuous time P.I.D. controller equation
+													\[ C(t) = k_p*e(t) + k_d*e(t) + k_i*\int_{0}^{t}e(t)dt
+													\] 
+													to the difference equation 
+													\[ c_n = \frac{T}{2}(a*e_n + b*e_{n-1} + c*e_{n-2} + c_{n-2})
+													\]
+													where \[
+													a=\frac{2k_p}{T}+\frac{4k_d}{T^2}+k_i, b=2k_i - \frac{8k_d}{T^2}, c=\frac{4k_d}{T^2}+k_i-\frac{2k_p}{T}
+													\]
+													and \(e_n\) is the error in the angle outputted by the complementary filter.
+												</p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
