--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory / ETOILES - Stickcube</h4>
 												<p><span class="image right"><img src="images/new_cad1.png" alt="" /></span>The attitude determination and control system (ADCS) is often the most difficult to test because the microgravity conditions in space are difficult to simulate on earth without expensive equiptment. In an attempt to remedy this for CPCL, Stickcube was started to be a testing aparatus for attitude determination hardware and software as well as control algorithms. The aparatus would involve an inverted pendulum, controlled with two reaction wheels. The system was designed to use an arduino uno mounted to the top of the pendulum with the BNO055 IMU unit and 2 Pololu 9.7:1 metal gearmotors. A P.I.D. controller was programmed onto the arduino along with a complementary filter to obtain the IMU's absolute orientation.</p>
-												<p><span class="image left"><img src="images/new_wheel.png" alt="" /></span>For the project, several cad models were made and verified for manufacturability. The wheels were manufactured out of aluminum 6061. To get the wheel and controller specifications, a full simulation was created and tested in simulink. The simulation included the rigid body dynamics of the pendulum, the motor and reaction wheel dynamics and the P.I.D. controller.</p>
+												<p><span class="image left"><img src="images/new_wheel.png" alt="" /></span>For the project, several cad models were made and verified for manufacturability. The wheels were manufactured out of aluminum 6061. To get the wheel and controller specifications, a full simulation was created and tested in simulink. The simulation included the rigid body dynamics of the pendulum, the motor and reaction wheel dynamics and the P.I.D. controller. Additional simulation work was done in a python simulation to better account for the pendulum's angular acceleration in the attitude readiings.</p>
 												<p>The complementary filter was descritized using the bilinear transform from a continuous-time s-domain transfer function to a discrete time z-domain transfer function. The following difference equation was then obtained for it's implementation in the code
 													\[\Theta_{n} = \frac{1}{2+\omega_{c}T}(T*(u_{n}+u_{n-1})+\Theta_{n-1}*(\omega_c T - 2))
 													\]
@@ -138,6 +138,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 													\]
 													and \(e_n\) is the error in the angle outputted by the complementary filter.
 												</p>
+												<p><span class="image right"><img src="images/stickcube_state_diagram.drawio.png" alt="" /></span>These algorithms were implemented in the code architecture of a finite state machine, written in C++ for arduino. To perform tests on the filter parameters, a test script was written in python read outputs of the filter and visualize the angles produced in matplotlib. </p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
