started adding stuff to crab cavities stuff

--- a/projects.html
+++ b/projects.html
@@ -148,9 +148,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<section>
 										<div id="Crab cavity trans beam load"><div></div>
 										<h3 class="major"></h3>
-											<h4>Cal Poly Physics Department Under Dr. Themis Mastoridis - Crab Cavity Transient Beam Loading Simulation</h4>
-												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
-												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+											<h4>Cal Poly Physics Department Under Dr. Themis Mastoridis - EIC Crab Cavity LLRF Simulations and Specifications</h4>
+												<p><span class="image left"><img src="images/The-schematic-of-EIC-crab-crossing-scheme.png" alt="" /></span>In a circular particle accelerator, crab cavities are electromagnetic reasonators with a reasonance in the RF spectrum. They are used to tilt to beam before and after the point of interaction in order to increase beam overlap and thus increase beam luminosity. The crabbed beam interaction can be seen visually via the above picture (credit: Derong Xu, <i>Study of Harmonic Crab Cavity in EIC Beam-Beam Simulations</i>, 2022). The Electron Ion Collider (EIC) will utilize crab cavities for a 25 mrad tilt before and after the interaction point, increasing the luminosity by an order of magnitude.</p>
+												<h4>Transient Beam Loading</h4>
+												<p>The control system for these cavities must be able to react to the "beam loading", the field disturbances caused by charged particles coming throught the cavity every turn.</p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
