started adding MCM stuff

--- a/projects.html
+++ b/projects.html
@@ -165,9 +165,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<section>
 										<div id="MCM"><div></div>
 										<h3 class="major"></h3>
-											<h4>COMAP MCM - Road Cyclist Bioenergy Model and Optimal Control</h4>
-												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
-												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
+											<h4>COMAP MCM 2022- Road Cyclist Bioenergy Model and Optimal Control</h4>
+												<p><span class="image left"><img src="images/flanders_male_tt_powergrade.png" alt="" /></span>The COMAP Mathematical Contest in Modeling (MCM) is a yearly 4-day competition in applied mathematics. The competition involves researching and creating a model for a real world system given to you by the competition, analyzing your model and compiling your findings into a 25-page research paper. The 2022 MCM was the third time I participated, and the task was to create a model that can inform a long-distance road cyclist on the optimal strategy for distributing their energy over the course of a race.</p>
+												<p></p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
