tried changing image size

--- a/projects.html
+++ b/projects.html
@@ -166,8 +166,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div id="MCM"><div></div>
 										<h3 class="major"></h3>
 											<h4>COMAP MCM 2022- Road Cyclist Bioenergy Model and Optimal Control</h4>
-												<p><span class="image left"><img src="images/flanders_male_tt_powergrade.png" alt="" /></span>The COMAP Mathematical Contest in Modeling (MCM) is a yearly 4-day competition in applied mathematics. The competition involves researching and creating a model for a real world system given to you by the competition, analyzing your model and compiling your findings into a 25-page research paper. The 2022 MCM was the third time I participated, and the task was to create a model that can inform a long-distance road cyclist on the optimal strategy for distributing their energy over the course of a race.</p>
-												<p></p>
+												<p><span class="image left"><img src="images/flanders_male_tt_powergrade.png" alt="" width="1307" height="464"/></span>The COMAP Mathematical Contest in Modeling (MCM) is a yearly 4-day competition in applied mathematics. The competition involves researching and creating a model for a real world system given to you by the competition, analyzing your model and compiling your findings into a 25-page research paper. The 2022 MCM was the third time I participated, and the task was to create a model that can inform a long-distance road cyclist on the optimal strategy for distributing their energy over the course of a race.</p>
+												<p><span class="image right"><img src="images/flanders_male_tt_powergrade.png" alt="" /></span>T</p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
