tried different image formatting for MCM

--- a/projects.html
+++ b/projects.html
@@ -166,8 +166,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div id="MCM"><div></div>
 										<h3 class="major"></h3>
 											<h4>COMAP MCM 2022- Road Cyclist Bioenergy Model and Optimal Control</h4>
-												<p><img src="images/flanders_male_tt_powergrade.png" alt="" width="654" height="232"/>The COMAP Mathematical Contest in Modeling (MCM) is a yearly 4-day competition in applied mathematics. The competition involves researching and creating a model for a real world system given to you by the competition, analyzing your model and compiling your findings into a 25-page research paper. The 2022 MCM was the third time I participated, and the task was to create a model that can inform a long-distance road cyclist on the optimal strategy for distributing their energy over the course of a race.</p>
-												<p><span class="image right"><img src="images/tokyo_females_phi.png" alt="" /></span></p>
+												<p><span class="image fit"><img src="images/flanders_male_tt_powergrade.png" alt="" width="654" height="232"/></span>The COMAP Mathematical Contest in Modeling (MCM) is a yearly 4-day competition in applied mathematics. The competition involves researching and creating a model for a real world system given to you by the competition, analyzing your model and compiling your findings into a 25-page research paper. The 2022 MCM was the third time I participated, and the task was to create a model that can inform a long-distance road cyclist on the optimal strategy for distributing their energy over the course of a race.</p>
+												<p><span class="image right"><img src="images/tokyo_females_phi.png" alt="" /></span>To meet this task, my team, consisting of myself, Madison Lytle and Callan Whitney viewed the task as a constrained optimal control problem. The optimization was the functional 
+												\[\int_{0}^{L}\frac{1}{v(t)}dt=T_f
+												\] the total time to finish the race, subject to the constraint equations
+												\[W'_{cap}-\int_{0}^{T_f}W_{exp}e^{-\delta(t)(t-u)/\tau_{w}}dt=0, P_m(t)=CP+(P_{max}-CP)W_{exp}
+												\]</p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
