--- a/projects.html
+++ b/projects.html
@@ -170,9 +170,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<p><span class="image right"><img src="images/tokyo_females_phi.png" alt="" /></span>To meet this task, my team, consisting of myself, Madison Lytle and Callan Whitney viewed the task as a constrained optimal control problem. The optimization was the functional 
 												\[\int_{0}^{L}\frac{1}{v(t)}dt=T_f
 												\] the total time to finish the race, subject to the constraint equations
-												\[W'_{cap}-\int_{0}^{T_f}W_{exp}e^{-\delta(t)(t-u)/\tau_{w}}dt=0, P(t)=F(t)v(t), \\
+												\[W'_{cap}-\int_{0}^{T_f}W_{exp}e^{-\delta(t)(t-u)/\tau_{w}}dt=0, P(t)=F(t)v(t),\] \[
 												F(t)= C_d(v+v_w)^2 + mg(\sin(\phi)+C_r) + m_e\frac{dv}{dt}, P_m(t)=CP+(P_{max}-CP)W_{exp}
-												\]</p>
+												\] 
+												</p>
 												<a href="#" class="button small">Repository</a>
 									<section>
 
