finished up MCM stuff and added links

--- a/projects.html
+++ b/projects.html
@@ -176,8 +176,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												</p>
 												<p><span class="image left"><img src="images/tokyo_females_phi.png" alt="" /></span>Since this was a highly nonlinear problem, the optimization was intractable in most numerical optimization schemes. The method of sequential quadratic programming for it's ability to solve nonlinear constrainted optimization problems. This method involves adding a quadratic programming subproblem to a normal Newton's method solver. This method could be easily impemented in matlab using the optimization toolbox. Once implemented, the model was used to optimize over several test courses (pictured above).</p>
 												<p><span class="image right"><img src="images/wind_std_time_std.png" alt="" /></span>The effect of environmental perpurbations (wind, turning etc.) was also studied on the model. To generalize the model, as well as reduce the computational cost, we studied courses as concatenations of generic pieces (called course elements) and the optimizations of those course elements. Whether the concatenation of course element optimizations is the same as the optimization of the whole course together was also studied but due to time constraints we were not able to fully the determine the conditions in which the optimizations would agree.</p>
-												<p>Our paper recieved the designation of finalist in the competition and received the MAA</p>
-												<a href="#" class="button small">Repository</a>
+												<p>Our paper recieved the designation of finalist in the competition and received the MAA award, one of of 24 teams out of about 15,000 to receive and award and one of 3 U.S. teams to receive an award. The paper also lead to a presentation at Mathfest 2022, MAA's yearly conference and JMM 2023. Our paper submission can be viewed <a href="MCM2022-1.pdf">here</a>.</p>
+												<a href="https://github.com/trevorgloe/MCM2022" class="button small">Repository</a>
 									<section>
 
 									<section>
