added a bit to the mushroom stuff

--- a/projects.html
+++ b/projects.html
@@ -198,9 +198,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div id="Mushroom data"><div></div>
 										<h3 class="major"></h3>
 											<h4>Mathematical Data Science Final Project - Clustering and TDA for iNaturalist Mushroom Foraging Data</h4>
-												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for 250 dollars, compared with comercial star trackers nearing 30,000 dollars.</p>
-												<p>Fill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler textFill text filler text filler text filler text</span></p>
-												<a href="#" class="button small">Repository</a>
+												<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>The Cal Poly mycology club has access to data from over 700 muchroom identifications, taken from all over the west coast. All the data is stored with the date, time, location of the mushroom, and species. Many useful pieces of information can be obtained from this data such as the locations of unsually low mushroom sightings.</p>
+												<p>For the final project of our applied mathematics special topics class in mathematical data analysis, my group consisting of myself, Madison Lytle (from whom the mycology data came from), Conner Fletcher, and Jaxon Greene analyzed this data using two techniques covered in the class: clustering and topological data analysis. The clustering allowed us to group species together into commonly found areas to determine the most common spots for certain species. The topological data analysis allowed us to spot certain holes in the data; places where there was an unusual lack of muchroom sightings.</span></p>
+												<a href="https://github.com/trevorgloe/Math476project_mushroom_data" class="button small">Repository</a>
 									<section>
 
 									<section>
